kubernetes/apps/overlays/dev/archeflow/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: archeflow-site-ingress
  annotations:
    tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: archeflow-site
                port:
                  number: 80
  tls:
    - hosts:
        - archeflow-site-dev
